# Tenjin

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  auth_run.py  docker-compose.yml  pp.py  pyproject.toml  redis.Dockerfile  requirements.txt  run.py  worker.Dockerfile
auth_server/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  auth_app.py  auth_auxillary.py  blueprint_cmd.py  blueprint_routes.py  config.py  dependencies.py  gunicorn.conf.py  key_container.py  keygen.py  models.py  pyproject.toml  redis_kwargs.json  redis_manager.py  redis_syncedstore_kwargs.json  routes.py  strings.py  token_manager.py  tokens.py
auth_server/alembic/: env.py
auth_server/alembic/versions/: 649f4acaf78c_init.py  792513ee857c_.py  8ede8d8bdb6a_adds_permissions_enum.py  936866dd9020_.py  c3f9b8d5e5f5_.py
auth_server/authz/: example.acl  init.sh  init.sql  user_roles.yaml
auth_server/blueprints/: __init__.py  blueprint_cmd.py  blueprint_routes.py
auth_server/config/: app_config.toml  redis_settings.toml  sub_config.py
auth_server/migrations/versions/: 145e5f8b6b8e_.py  81dad9fdafa0_.py  8922706208e1_.py  8e0c657d6685_.py  c7a66e3e52c8_.py
auth_server/models/: database.py  database_enums.py
auth_server/repositories/: __init__.py  keydata.py
auth_server/security/: __init__.py
auth_server/src/auth_server/: auth_app.py  dependencies.py  gunicorn.conf.py  main.py  strings.py
auth_server/src/auth_server/authz/: example.acl  init.sh  init.sql
auth_server/src/auth_server/blueprints/: __init__.py  auth.py  blueprint_cmd.py  blueprint_routes.py  cmd.py  keys.py
auth_server/src/auth_server/config/: __init__.py  app_config.py  app_config.toml  constants.py  sub_config.py  utils.py
auth_server/src/auth_server/models/: __init__.py  auth_requests.py  cmd_requests.py  database.py  session.py
auth_server/src/auth_server/repositories/: keydata.py
auth_server/src/auth_server/routers/: __init__.py  admin.py  auth.py  (+2 more)
auth_server/static/: jwks_schema.json
auth_server/utils/: auth_auxillary.py  bootup.py  singleton.py
auxillary/: decorators.py  pyproject.toml  redis_manager.py  utils.py
auxillary/src/auxillary/: __init__.py  decorators.py  singleton.py  typing_utils.py  utils.py
resource_database_workers/: .env.example  cleanup.py  genesis.py  pyproject.toml
resource_database_workers/batch_workers/: soft_delete.py  user_activity_delete.py  user_activity_recovery.py  weak_delete.py  worker_utils.py
resource_database_workers/src/resource_database_workers/: __main__.py  bootup.py  cli.py  dependencies.py
resource_server/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  app.py  blueprint_admin.py  blueprint_animes.py  blueprint_comments.py  blueprint_config.py  blueprint_forum.py  blueprint_misc.py  blueprint_posts.py  blueprint_templates.py  blueprint_user.py  dependencies.py  external_extensions.py  flask_config.py  gunicorn.conf.py  models.py  pyproject.toml  redis_config.py  resource_auxillary.py  resource_decorators.py  user_roles.yaml
resource_server/alembic/: env.py
resource_server/alembic/versions/: 09306c1baeae_.py  0a1370421a2b_removes_rtbf.py  174235ccf672_.py  19ed1d233cb9_.py  33fe0a168e0a_adds_dlq_table.py  4bd0490dba29_changes_password_recovery_tokens_url_.py  59925fd514af_makes_synposis_text_type.py  76d4417ceeb6_adds_failed_side_effects_table.py  8f2bdc6314fd_init.py  a639269cddd3_.py  a9cdcdd416de_adds_event_columns.py  ac751c82a6e0_adds_counter_dlq.py  ba411046cc75_adds_deletion_mixins.py  cec56bf97d17_makes_users_last_login_nullable.py  ed06aa294747_adds_streamevent.py  ee3c37f5d96c_removes_ack_time_col.py
resource_server/authz/: example.acl  init.sh  init.sql  user_roles.yaml
resource_server/blueprints/: __init__.py  blueprint_animes.py  blueprint_comments.py  blueprint_forum.py  blueprint_misc.py  blueprint_posts.py  blueprint_user.py  url_prefixes.py
resource_server/config/: constants.py  redis_settings.toml  sub_config.py
resource_server/migrations/versions/: 0163e3728b2e_.py  0761bbc2570c_.py  08c9d52d735f_.py  11ef89692498_.py  138fdcef8a1b_.py  258bd70f9d5c_.py  25af3634aada_.py  2726869d5e19_.py  2e6d0b6ed80f_.py  49b851131dd0_.py  5c241b905069_.py  63989a870f83_.py  84df0c85f5f0_.py  84f2c6a769b8_.py  8730ffc1296a_.py  98a994a5980f_.py  a1d8f5a0c609_.py  a25f7819cca0_.py  b0f3cbfa47e0_.py  c48534fd5f89_.py  c4b38d290ad6_.py  c96cd81adbbf_.py  caf1d675b13a_.py  ce8715711132_.py  d5833f423191_.py  dddc44d42f79_.py  e57ea454d9c6_.py  e6efe425fec5_.py  eebbb200a4c1_.py  f505901ccc85_.py  f8daa9bea417_.py  fc411ecd643e_.py
resource_server/scripts/: cleanup.py  genesis.py  mail.py
resource_server/scripts/batch_workers/: counter.py  delete.py  insert.py  soft_delete.py  user_activity_delete.py  user_activity_recovery.py  weak_delete.py  weak_inserts.py  worker_config.json  worker_utils.py
resource_server/scripts/email_templates/: deletion.html  password.html  recovery.html
resource_server/src/resource_server/: __init__.py  cache_manager.py  dependencies.py  event_streamer.py  key_manager.py  main.py  request_dependencies.py  resource_auxillary.py  resource_decorators.py
resource_server/static/scripts/: anime.js  auth_check.js  change_password.js  create_forum.js  fetch_animes.js  fetch_forums.js  fetch_genres.js  forgot_password.js  forum.js  forum_admins.js  forum_options.js  forum_post.js  forum_scroll.js  forum_sub.js  login.js  post_comments.js  post_delete.js  post_edit.js  post_reports.js  post_save.js  post_vote.js  profile.js  recover_account.js  signup.js  sub_anime.js
resource_server/static/stylesheets/: about.css  anime.css  animes.css  auth.css  error.css  forum.css  globals.css  landing.css  legal.css  post_page.css  profile.css  variables.css
resource_server/templates/: about.html  anime.html  animes.html  base.html  change_password.html  contact_us.html  cookie_policy.html  error.html  forgot_password.html  forum.html  index.html  legal_notice.html  login.html  post.html  privacy_policy.html  profile.html  recover_account.html  signup.html  user_agreement.html
(+128 files in other folders)
