[project]
name = "tenjin"
version = "1.0.0"
description = "Tenjin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autoflake>=2.3.3",
    "black>=26.3.1",
    "pre-commit>=4.6.0",
]

[tool.uv.workspace]
members = [
    "auth_server",
    "auxillary",
    "resource_auxillary",
    "resource_database_workers",
    "resource_server"
]
