[project]
name = "auth-server"
version = "1.0.0"
description = "Authentication authority for Tenjin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4,<2",
    "async-timeout>=5.0.1,<6",
    "attrs>=25.3.0,<26",
    "blinker>=1.9.0,<2",
    "certifi>=2025.1.31,<2026",
    "cffi>=1.17.1,<2",
    "charset-normalizer>=3.4.1,<4",
    "click>=8.1.8,<9",
    "colorama>=0.4.6,<1",
    "cryptography>=44.0.2,<45",
    "ecdsa>=0.19.2,<1",
    "flask>=3.1.3,<4",
    "gmpy2>=2.2.1,<3",
    "greenlet>=3.1.1,<4",
    "gunicorn>=25.3.0,<26",
    "idna>=3.15,<4",
    "itsdangerous>=2.2.0,<3",
    "jinja2>=3.1.5,<4",
    "jsonschema>=4.23.0,<5",
    "jsonschema-specifications>=2025.4.1,<2026",
    "mako>=1.3.12,<2",
    "markupsafe>=3.0.2,<4",
    "orjson>=3.11.6,<4",
    "psycopg2-binary>=2.9.10,<3",
    "pycparser>=2.22,<3",
    "pydantic>=2.11.10,<3",
    "pydantic-settings>=2.14.1,<3",
    "pyjwt>=2.12.0,<3",
    "python-dotenv>=1.2.2,<2",
    "pyyaml>=6.0.2,<7",
    "redis>=5.2.1,<6",
    "requests>=2.33.0,<3",
    "six>=1.17.0,<2",
    "sqlalchemy>=2.0.38,<3",
    "toml>=0.10.2,<1",
    "typing-extensions>=4.12.2,<5",
    "ujson>=5.12.1,<6",
    "urllib3>=2.7.0,<3",
    "werkzeug>=3.1.6,<4",
    "auxillary",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
auxillary = { path = "../auxillary"}
