[project]
name = "auth-server"
version = "1.0.0"
description = "Authentication authority for Tenjin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4,<2",
    "cryptography>=44.0.2,<45",
    "ecdsa>=0.19.2,<1",
    "mako>=1.3.12,<2",
    "orjson>=3.11.6,<4",
    "pydantic>=2.11.10,<3",
    "pydantic-settings>=2.14.1,<3",
    "pyjwt>=2.12.0,<3",
    "python-dotenv>=1.2.2,<2",
    "redis>=5.2.1,<6",
    "urllib3>=2.7.0,<3",
    "auxillary",
    "fastapi[standard]>=0.136.3",
    "aiofiles>=25.1.0",
    "psycopg>=3.3.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
auxillary = { path = "../auxillary"}
