[project]
name = "auxillary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis>=5,<6",
]

[build-system]
requires = ["setuptools >= 82.0.0",]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
