[project]
name = "auxillary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "redis>=7.0.0, <8"
]

[build-system]
requires = ["setuptools >= 82.0.0",]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
