[project]
name = "resource-database-workers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "resource_auxillary",
    "sqlalchemy>=2.0.50"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
resource_auxillary = { path = "../resource_auxillary"}
