[project]
name = "resource-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.14.1",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "ecdsa==0.19.1",
    "flask==3.1.0",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "gmpy2==2.2.1",
    "greenlet==3.1.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "orjson==3.10.15",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pyjwt==2.9.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rpds-py==0.25.0",
    "six==1.17.0",
    "sqlalchemy==2.0.38",
    "toml==0.10.2",
    "typing-extensions==4.12.2",
    "ujson==5.10.0",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
]
