[project]
name = "resource-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "auxillary>=0.1.0",
    "bcrypt>=5.0.0",
    "ecdsa>=0.19.2",
    "fastapi[standard]>=0.136.3",
    "psycopg>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "redis>=7.0.0, <8",
    "resource_auxillary>=0.1.0",
    "sqlalchemy>=2.0.50",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
auxillary = { workspace = true}
resource_auxillary = { workspace = true}
